tests/ui/attributes/crate_name_on_other_items.stderr
error: malformed `crate_name` attribute input
  --> $DIR/crate_name_on_other_items.rs:11:1
   |
LL | #[crate_name]
   | ^^^^^^^^^^^^^ help: must be of the form: `#[crate_name = "name"]`

error: aborting due to 1 previous error

